@@ -13,6 +13,7 @@ Patches:
   Shane Harper <shaneharper@users.sourceforge.net>
   David Fraser <davidfraser@users.sourceforge.net>
   Vadim Berezniker <kryptolus@users.sourceforge.net>
+  Stanislav Petrakov <stannic@gmail.com>
 
 Translations:
   Traditional Chinese:    Leo Liaw <leo@mis.ccu.edu.tw> 
