@@ -5,6 +5,7 @@ Version 1.4.3
 - Unix: fixed crash with Zemberek spell-checker backend installed (#276)
 - fixed parsing of catalogs produced with xgettext --indent (#189)
 - fixed TM updating broken in 1.3.5 (#294)
+- support GNOME's xml2po file references (#314)
 
 
 Version 1.4.2
